--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>ユーザー 作成</h1>
+<h1>ユーザー 編集</h1>
 <%= form_with model: @user, local: true do |f| %>
   <p>氏名：<%= f.text_field :name %></p>
   <p>年齢：<%= f.text_field :age %></p>
