--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,7 +2,7 @@
 <% @tasks.each do |task| %>
 <div>
 <%= task.title %>
-</div
->
+<%= link_to '詳細', task_path(task.id) %>
+</div>
 <% end %>
 <%= link_to '投稿画面へ', new_task_path %>
