削除機能を実装

--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -10,4 +10,4 @@
   </div>
 <%= form.submit '送信' %>
 <% end %>
-<%= link_to '一覧画面へ', tasks_path, class:"to-index" %>
+<%= link_to '一覧画面へ', tasks_path, class:"line-bottom" %>
