--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,9 +1,10 @@
-<h1>タスク一覧</h1>
+<h1>タスク 一覧</h1>
+<%= link_to '投稿画面へ', new_task_path, class:"line-bottom" %>
+<p>
 <% @tasks.each do |task| %>
-<div>
 <%= task.title %>
-<%= link_to '詳細', task_path(task.id) %>
-<%= link_to '編集', edit_task_path(task.id) %>
-</div>
+<%= link_to '詳細', task_path(task.id), class:"line-bottom" %>
+<%= link_to '編集', edit_task_path(task.id), class:"line-bottom" %>
+<%= link_to '削除', task_path(task), method: :delete, data: {confirm: '削除しますか？'}, class:"line-bottom" %>
 <% end %>
-<%= link_to '投稿画面へ', new_task_path %>
+</p>
